syntax = "proto3";

package entpb;

option go_package = "github.com/rotemtam/ent-grpc-example/ent/proto/entpb";
import "google/protobuf/timestamp.proto";



message Customer {
  int64 id = 1;

  string name = 2;

  string phone_number = 3;

  string email = 4;

  string license_id = 5;

  string address = 6;

  int64 membership_number = 7;

  bool is_active = 8;

  string password = 9;

  google.protobuf.Timestamp create_at = 10;

  google.protobuf.Timestamp update_at = 11;

  string role = 12;
}

message RegisterInput{
  string name = 2;

  string phone_number = 3;

  string email = 4;

  string license_id = 5;

  string address = 6;

  int64 membership_number = 7;

  string password = 9;
}

message GetCustomerByEmailInput{
  string email = 2;
}

message LoginInput{
  string email = 2;
  string password = 3;
}

message UpdateCustomerInput{
  int64 id = 1;

  string name = 2;

  string phone_number = 3;

  string email = 4;

  string license_id = 5;

  string address = 6;

  int64 membership_number = 7;

}

message ChangePasswordInput{
  int64 id = 1;

  string old_password = 2;

  string new_password = 3;

  string confirm_password = 4;
}

message UpdateRoleInput{
  int64 id = 1;

  string role = 2;
}


service CustomerService {
  rpc Register ( RegisterInput ) returns ( Customer );
  rpc GetCustomerByEmail (GetCustomerByEmailInput) returns (Customer);
  rpc Login (LoginInput) returns (Customer);
  rpc Update (UpdateCustomerInput) returns (Customer);
  rpc ChangePassword(ChangePasswordInput) returns (Customer);
  rpc UpdateRole(UpdateRoleInput) returns (Customer);
}